--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "afeezbadmos",
   "version": "0.1.0",
-  "homepage":"https://faze20.github.io/codesnippets",
+  "homepage":"https://faze20.github.io/codesnippets/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
